crates/language-v2/tests/src/fail/p3_references/invalid_filter/test.stderr
error: Reference 'Baz' of kind 'Fragment' is not valid. Expected: [Struct, Enum, Repeated, Separated, Precedence, Keyword, Token]
  --> src/fail/p3_references/invalid_filter/test.rs:14:67
   |
14 |                     Struct(name = Bar, fields = (field = Required(Baz))),
   |                                                                   ^^^
